görüntü seçme ve karakter sınırlandırma yapıldı
görüntü seçme görüntüye ait maksimum karakter sınırlandırma işlemi
yapıldı. Ek test görselleri eklendi.

--- a/watermark/watermark/Form1.resx
+++ b/watermark/watermark/Form1.resx
@@ -265,7 +265,7 @@
         kiRJkiRJv+svf/1PKt303d2nNe4AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="goruntuSecPictureBox.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABFwAAAJ2CAYAAABinpajAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAW
         JQAAFiUBSVIk8AAA/7JJREFUeF7s/WuQXNd13w23KFoyyMEMxqYI4QkoifVAsYXHpkXGlsvWG5MSRYIk
