metin kontrol işlemleri tamamlandı
check kontrolü yapılarak görüntüye ekleme yapılacak.

--- a/watermark/watermark/Form1.resx
+++ b/watermark/watermark/Form1.resx
@@ -1826,7 +1826,7 @@
         vMeVd/Hv38ppNBqNRqPRaDQajUaj0WjH33q9/x+dYNwyU4kroQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="islemeBaslaButon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAA8gAAAEgCAYAAABo2lrEAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAW
         JQAAFiUBSVIk8AAA/7JJREFUeF7s/QfYtelZ1wt/lq0fUpLQQsjQZJRIFdgBpEgUFalu9EP33m4pIRAI
